Har gjort en del småsaker ikväll. Lagt till bild, bytt bild. Centrerat text i en grid. Lagt till video i iframe som skalar.

--- a/webbutveckling_1/assignment/about.html
+++ b/webbutveckling_1/assignment/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About me</title>
     <link rel='stylesheet' href='css/aboutstyle.css'>
     <link rel='stylesheet' href='css/navbarstyle.css'>
     <link rel='stylesheet' href='css/footerstyle.css'>
@@ -34,7 +34,7 @@
 </nav>
 
 <header>
-    <h1>Christoffer Knaving</h1>
+    <h1>StillUnknown</h1>
 </header>
 
 <main class="grid-container">
@@ -53,32 +53,56 @@
             <article>
                 <p>
                     I was born on the 29th of June 1985 in a town in Sweden called Trollhättan. With a quick use of math
-                    we
-                    can easily see that it makes me 36 years old today.
+                    we can easily see that it makes me 36 years old today. I grew up in a really tiny town called Magra.
+                    I can't recall its exact location on the top of my head, but it's in the vicinity of Sollebrunn. My
+                    sister was born a year later, and we spent our next six years in Magra. Eventually my mother and
+                    father separated due to my father meeting someone else. There was a big drama which I won't go into
+                    here, but it ended up with my mother, me and my sister moving to a suburb to Gothenburg called
+                    Ytterby.
                 </p>
                 <p>
-                    I now live in a suburb to Gothenburg called Ytterby with my family in a house we built 2019. It
+                    I spent the next 16 years in Ytterby but when I got an offer to rent an apartment in Gothenburg via
+                    a friend I couldn't say no. That a girl I was interested in lived only a few minutes from that place
+                    didn't exactly made the decision harder ;)<br>
+                    This girl and I work at the same company so I'd been checking her out for a couple for years without
+                    really trying to make a move on her. I've only sent her a couple of text maybe. Well, happy
+                    coincidence, almost the same time as I moved to the
+                    apartment our company had a big party which we both attended. Later that night we both ended up at
+                    the bar, and it quickly got awkward because I'm really shy when it comes to speaking with girls and
+                    it ended up with me not saying a word to her..<br>
+                    Well, the night passed, and I felt like an idiot. Luckily this girl texted me after a week and
+                    called me out. Said I was a chicken for not speaking to her, which is true! She later same night
+                    called me and asked if I could drive her home from a party she attended and ofcourse i could :D
+                </p>
+                <p>
+                    If you haven't guessed it by now this girl and I ended up together. I moved in with her three months
+                    later and she got pregnant a month after that. Ten months later our first daughter was born. We soon
+                    felt that her apartment was a bit too small for us since we knew we wanted more children so we
+                    started looking for houses. We saw a plot was for sale in Ytterby and on a whim
+                    we decided to buy it and build a house. We later got three additional kids so now our family
                     consists of:
                 </p>
                 <ul>
                     <li>Liselott, 40yrs</li>
+                    <li>Christoffer, 36yrs</li>
                     <li>Linnéa, 11yrs</li>
                     <li>Alicia, 10yrs</li>
                     <li>Noella, 6yrs</li>
                     <li>Casper, 2yrs</li>
                 </ul>
             </article>
+        </section>
+    </div>
+
+    <div>
+        <section class="grid-item">
             <article>
                 <h2>What my experience with tech looks like</h2>
                 <p>
                     Since the day i could figure out what tech was, it grabbed me and never let go. I still remember our
-                    first
-                    TV my
-                    mother bought after dad left us on the streets. We've just moved into an apartment and the time to
-                    configure
-                    the TV was here. Let me tell you one thing, it doesen't work as modern TV's do. Back then, you had
-                    to
-                    manually find the frequency of every channel and then set it to the correct channelnumber.
+                    first TV my mother bought to our apartment we moved into after my parents separated. Let me tell you
+                    one thing, it doesn't work as modern TV's do. Back then, you had to manually find the frequency of
+                    every channel and then set it to the correct channelnumber.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae commodi, corporis
@@ -88,6 +112,8 @@
                 </p>
             </article>
         </section>
+    </div>
+    <div>
         <section class="grid-item">
             <h2>What i prefer to do on my spare time</h2>
             <article>
@@ -125,6 +151,8 @@
                 </ul>
             </article>
         </section>
+    </div>
+    <div>
         <section class="grid-item">
             <h2>Here's a funny video from a guy who's content i've recently stumbled upon</h2>
             <p><a href="https://www.youtube.com/watch?v=e23pW_0BPo0" target="_blank">
@@ -136,8 +164,8 @@
 
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
