--- a/webbutveckling_1/assignment/blogg.html
+++ b/webbutveckling_1/assignment/blogg.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogg</title>
-    <link rel='stylesheet' href='css/productsstyle.css'>
+    <link rel='stylesheet' href='css/bloggstyle.css'>
+    <link rel='stylesheet' href='css/navbarstyle.css'>
+    <link rel='stylesheet' href='css/footerstyle.css'>
 </head>
 <body>
 
@@ -38,8 +40,8 @@
 </form>
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
