--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -38,8 +38,7 @@
 </header>
 
 <p class="center-text-over-chart"><strong>To know more about the different courses in Webbutveckling, click on the
-    coursename
-    in the left side in the table and to zoom in just hover over the specific course.</strong></p>
+    coursename in the left side in the table and it will take you to Skolverket.</strong></p>
 
 <main>
     <div>
@@ -179,8 +178,8 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
