--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -41,7 +41,8 @@
 <main>
     <section>
         <p>
-            <strong>Welcome to my homepage. Feel free to navigate through the navbar at the top</strong>
+            <strong>I've built this webpage as a project in the course webdeveloper that i'm attending at Campus Mölndal<br>
+                It's built using HTML5 and CSS. Feel free to navigate through the navbar at the top</strong>
         </p>
     </section>
 
@@ -51,8 +52,8 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
