--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -49,8 +49,8 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
