--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -39,7 +39,7 @@
 
 <main>
     <div class="text-left-image-right">
-        <section>
+        <section class="center-text-horisontally-in-grid">
             <h2>GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
             <article>
                 <p>
@@ -68,7 +68,7 @@
                 </p>
             </article>
         </section>
-        <section class="center">
+        <section class="center-picture-grid">
             <p><img src="img/3090small.jpg" alt="3090 graphics card" class="img-responsive"></p>
 
             <p>
@@ -114,8 +114,8 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by Christoffer Knaving<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
 </footer>
 
 </body>
