Lägger till alt-taggar i products

--- a/webbutveckling_1/assignment/blogg.html
+++ b/webbutveckling_1/assignment/blogg.html
@@ -32,16 +32,89 @@
         </li>
     </ul>
 </nav>
+<header>
+    <h1>Welcome to StillUnknown's blogg</h1>
+    <p><strong>(Hover over the images to zoom)</strong></p>
+</header>
 
-<h1 class="header">Welcome to my blogg</h1>
+<main>
+    <div>
+        <h3>Published 2021-09-20</h3>
+        <article>
+            <p class="zoom">
+                <img src="img/hiding.PNG" class="image-width" alt="kid hiding in cabinets">
+            </p>
+        </article>
+        <p><strong>Casper hiding in the cabinet</strong></p>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo officia, temporibus? Accusamus
+                accusantium assumenda culpa dolore dolorum excepturi id illum in, quidem quisquam reiciendis, sit
+                tenetur. Accusantium ad aperiam dolores porro qui soluta. Adipisci, atque delectus et excepturi illo
+                ipsum nesciunt officiis perspiciatis tempore voluptatibus! Ipsum nobis quibusdam temporibus totam.
+            </p>
+        </article>
+    </div>
 
-<form>
-    <textarea>Hej jag heter Laban</textarea>
-</form>
+    <div>
+        <h3>Published 2021-09-19</h3>
+        <article>
+            <p class="zoom">
+                <img src="img/gamergirl.PNG" class="image-width" alt="girls plays with the computer">
+            </p>
+        </article>
+        <p><strong>Noella playing Roblox</strong></p>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid amet at autem beatae facilis
+                fuga inventore laboriosam maiores minima mollitia necessitatibus numquam officiis porro quod tenetur
+                ullam ut, voluptas. Amet eius, est et facilis fuga ipsa iusto laboriosam magnam, magni maiores nemo non
+                officiis quis quisquam sunt veniam, voluptatum?
+            </p>
+        </article>
+    </div>
+    <div>
+        <h3>Published 2021-09-18</h3>
+        <article>
+            <p class="zoom">
+                <img src="img/spider.PNG" class="image-width" alt="picture of a spider">
+            </p>
+        </article>
+        <p><strong>Saw this spider outside our window today</strong></p>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo officia, temporibus? Accusamus
+                accusantium assumenda culpa dolore dolorum excepturi id illum in, quidem quisquam reiciendis, sit
+                tenetur. Accusantium ad aperiam dolores porro qui soluta. Adipisci, atque delectus et excepturi illo
+                ipsum nesciunt officiis perspiciatis tempore voluptatibus! Ipsum nobis quibusdam temporibus totam.
+            </p>
+        </article>
+    </div>
+
+    <div>
+        <h3>Published 2021-09-17</h3>
+        <article>
+            <p class="zoom">
+                <img src="img/girlfriend.PNG" class="image-width" alt="girlfriend meme">
+            </p>
+        </article>
+        <p><strong>Funny meme i found that all guys can relate to</strong></p>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid amet at autem beatae facilis
+                fuga inventore laboriosam maiores minima mollitia necessitatibus numquam officiis porro quod tenetur
+                ullam ut, voluptas. Amet eius, est et facilis fuga ipsa iusto laboriosam magnam, magni maiores nemo non
+                officiis quis quisquam sunt veniam, voluptatum?
+            </p>
+        </article>
+    </div>
+</main>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt="shield io"></p>
+        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    </article>
 </footer>
 
 </body>
