--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -113,7 +113,7 @@
                 <tr class="bgc-hashtag5f93e8">
                     <td><a
                             href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
-                            target="_blank">Webserverprogrammering 1</a></td>
+                            target="_blank">Webserverprog 1</a></td>
                     <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar<br>och samspelet mellan
                         beställare, användare, formgivare och utvecklare.
                     </td>
@@ -141,7 +141,7 @@
                 <tr class="bgc-yellow">
                     <td><a
                             href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
-                            target="_blank">Webserverprogrammering 2</a></td>
+                            target="_blank">Webserverprog 2</a></td>
                     <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar<br>och samspelet mellan
                         beställare, användare, formgivare och utvecklare.
                     </td>
@@ -178,8 +178,10 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red"</p>
+        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    </article>
 </footer>
 
 </body>
