--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -41,19 +41,21 @@
 <main>
     <section>
         <p>
-            <strong>I've built this webpage as a project in the course webdeveloper that i'm attending at Campus Mölndal<br>
+            <strong>I've built this webpage as a project in the course webdeveloper that i'm attending at Campus Mölndal.<br>
                 It's built using HTML5 and CSS. Feel free to navigate through the navbar at the top</strong>
         </p>
     </section>
 
     <section>
-        <img src="img/ipaid2.jpg" alt="picture of dad holding a ipaid sign">
+        <img src="img/ipaid2.jpg" class="image-width" alt="picture of dad holding a ipaid sign">
     </section>
 </main>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt=""></p>
+        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    </article>
 </footer>
 
 </body>
