--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -45,12 +45,40 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </section>
+        <section><p>yoyoyo</p></section>
+    </div>
+
+    <div class="iframe-container">
+        <section>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
+                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </section>
+    </div>
+    <div class="iframe-container">
+        <section>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
+                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </section>
+    </div>
+    <div class="iframe-container">
+        <section>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
+                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </section>
     </div>
 </main>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red"</p>
+        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    </article>
 </footer>
 
 </body>
