--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -114,8 +114,10 @@
 </main>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt=""></p>
+        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    </article>
 </footer>
 
 </body>
