Lägger navbar som float: contour för att se snyggare ut på mobil.

--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -76,7 +76,7 @@
 
 <footer>
     <article>
-        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red"</p>
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt=""></p>
         <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
     </article>
 </footer>
