--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -111,6 +111,40 @@
                     incredible curve that brings you into the game" -Newsweek.com</p></article>
         </section>
     </div>
+    <div class="text-left-image-right">
+        <section class="center-text-horisontally-in-grid">
+            <h2>AMD Ryzen 9 5950X 3.4 GHz 72MB</h2>
+            <article>
+                <p>
+                    "the short conclusion for the Ryzen 9 5950X is that even at $799 suggested retail price, it enables
+                    a new level of consumer grade performance across the board. The single thread frequency is crazy
+                    high, and when combined with the new core design with its higher IPC, pushes workloads that are
+                    single-core limited above and beyond Intel’s best Tiger Lake processors. When it comes to
+                    multi-threaded workloads, we have new records for a consumer processor across the board."
+                    -anandtech.com</p>
+
+                <p>
+                    As a mega-core monster, the AMD Ryzen 9 5950X does exactly what we expected it to, given what we saw
+                    with the Ryzen 9 3950X that came before it: It provides elite-level multicore muscle at a reasonable
+                    price point. -uk.pcmag.com
+                </p>
+
+                <p>
+                    "AMD's Ryzen 9 5950X powered by the Zen 3 architecture, set the new benchmark for
+                    high-end gaming and application performance, all while delivering incredible power efficiency"
+                    -Tomshardware.com
+                </p>
+            </article>
+        </section>
+        <section class="center-picture-grid">
+            <p><img src="img/ryzen5950x.jpg" alt="picture of ryzen 5950x processor" class="img-responsive"></p>
+
+            <p>
+                <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
+                   target="_blank">Compare prices at Pricerunner</a>
+            </p>
+        </section>
+    </div>
 </main>
 
 <footer>
