--- a/webbutveckling_1/Lektioner/2021-09-21/index.html
+++ b/webbutveckling_1/Lektioner/2021-09-21/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel='stylesheet' href='/indexstyle.css'>
+    <link rel='stylesheet' href='/webbutveckling_1/Lektioner/2021-09-21/indexstyle.css'>
 </head>
 <body>
 
