Fixar till other (iframe) igen

--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -38,36 +38,41 @@
 </header>
 
 <main>
-    <div class="iframe-container">
+    <div class="center-text-over-iframe">
         <section>
-            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
-                    title="Linus Tech Tips reviews Samsung G9 Monitor"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-        </section>
-        <section><p>yoyoyo</p></section>
-    </div>
-
-    <div class="iframe-container">
-        <section>
-            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
-                    title="Linus Tech Tips reviews Samsung G9 Monitor"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+            <h2>Linus Tech Tips reviews Samsung Odyssey G9</h2>
         </section>
     </div>
     <div class="iframe-container">
         <section>
             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
-                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </section>
     </div>
+    <div class="center-text-over-iframe">
+        <section>
+            <h2>Marques Brownlee aka MKBHD reviews GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
+        </section>
+    </div>
     <div class="iframe-container">
         <section>
-            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
-                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/kFz9afj8lu0"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </section>
+    </div>
+    <div class="center-text-over-iframe">
+        <section>
+            <h2>Gamers Nexus reviews AMD Ryzen 9 5950X 3.4 GHz 72MB</h2>
+        </section>
+    </div>
+    <div class="iframe-container">
+        <section>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/72AHENDeTEI"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </section>
