--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -84,7 +84,7 @@
             <p><img src="img/samsungg92.jpg" alt="3090 graphics card" class="img-responsive"></p>
 
             <p>
-                <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
+                <a href="https://www.pricerunner.se/pl/25-3200145464/Bildskaermar/Samsung-Odyssey-G9-C49RG94SSR-priser"
                    target="_blank">Compare prices at Pricerunner</a>
             </p>
         </section>
@@ -140,7 +140,7 @@
             <p><img src="img/ryzen5950x.jpg" alt="picture of ryzen 5950x processor" class="img-responsive"></p>
 
             <p>
-                <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
+                <a href="https://www.pricerunner.se/pl/40-5305356/Processorer/AMD-Ryzen-9-5950X-3.4GHz-Socket-AM4-Box-without-Cooler-priser"
                    target="_blank">Compare prices at Pricerunner</a>
             </p>
         </section>
