--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -52,9 +52,21 @@
 </main>
 
 <footer>
-    <article>
-        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt=""></p>
-        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article class="footer-item">
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt="">
+        </p>
+    </article>
+    <article class="footer-item">
+        <a href='https://sv-se.facebook.com/' target='_blank'>
+            <img src='https://img.shields.io/badge/facebook-1F2833?&style=for-the-badge&logo=facebook' alt='facebook'>
+        </a>
+    </article>
+
+    <article class="footer-item">
+        <img src='https://img.shields.io/badge/instagram-1F2833?&style=for-the-badge&logo=instagram' alt='instagram'>
+    </article>
+    <article class="footer-item">
+        <img src='https://img.shields.io/badge/twitter-1F2833?&style=for-the-badge&logo=twitter' alt='twitter'>
     </article>
 </footer>
 
