--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -72,7 +72,8 @@
                     <td><a
                             href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DPRR%26courseCode%3DPRRPRR01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_PRRPRR01"
                             target="_blank">Programmering 1</a></td>
-                    <td>Ämnet programmering behandlar hur mjukvaror skapas, anpassas och utvecklas samt programmeringens roll
+                    <td>Ämnet programmering behandlar hur mjukvaror skapas, anpassas och utvecklas samt programmeringens
+                        roll
                         i
                         informationstekniska sammanhang som datorsimulering och praktisk datoriserad problemlösning.
                     </td>
@@ -179,9 +180,21 @@
 </main>
 
 <footer>
-    <article>
-        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt=""></p>
-        <p><a href="mailto:knavinglogistic@hotmail.se">E-mail the author</a></p>
+    <article class="footer-item">
+        <p>Copyright © 2021 by <img src="https://img.shields.io/badge/Still-Unknown-red" alt="">
+        </p>
+    </article>
+    <article class="footer-item">
+        <a href='https://sv-se.facebook.com/' target='_blank'>
+            <img src='https://img.shields.io/badge/facebook-1F2833?&style=for-the-badge&logo=facebook' alt='facebook'>
+        </a>
+    </article>
+
+    <article class="footer-item">
+        <img src='https://img.shields.io/badge/instagram-1F2833?&style=for-the-badge&logo=instagram' alt='instagram'>
+    </article>
+    <article class="footer-item">
+        <img src='https://img.shields.io/badge/twitter-1F2833?&style=for-the-badge&logo=twitter' alt='twitter'>
     </article>
 </footer>
 
