--- a/webbutveckling_1/assignment/blogg.html
+++ b/webbutveckling_1/assignment/blogg.html
@@ -34,18 +34,19 @@
 </nav>
 <header>
     <h1>Welcome to StillUnknown's blogg</h1>
-    <p><strong>(Hover over the images to zoom)</strong></p>
+    <p class="irrelevant-on-tablet-and-mobile"><strong>(Hover over the images to zoom)</strong></p>
 </header>
 
 <main>
-    <div>
+    <div class="container">
         <h3>Published 2021-09-20</h3>
+        <p><strong>Casper hiding in the cabinet</strong></p>
         <article>
             <p class="zoom">
                 <img src="img/hiding.PNG" class="image-width" alt="kid hiding in cabinets">
             </p>
         </article>
-        <p><strong>Casper hiding in the cabinet</strong></p>
+
         <article>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo officia, temporibus? Accusamus
@@ -56,14 +57,15 @@
         </article>
     </div>
 
-    <div>
+    <div class="container">
         <h3>Published 2021-09-19</h3>
+        <p><strong>Noella playing Roblox</strong></p>
         <article>
             <p class="zoom">
                 <img src="img/gamergirl.PNG" class="image-width" alt="girls plays with the computer">
             </p>
         </article>
-        <p><strong>Noella playing Roblox</strong></p>
+
         <article>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid amet at autem beatae facilis
@@ -73,14 +75,15 @@
             </p>
         </article>
     </div>
-    <div>
+    <div class="container">
         <h3>Published 2021-09-18</h3>
+        <p><strong>Saw this spider outside our window today</strong></p>
         <article>
             <p class="zoom">
                 <img src="img/spider.PNG" class="image-width" alt="picture of a spider">
             </p>
         </article>
-        <p><strong>Saw this spider outside our window today</strong></p>
+
         <article>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo officia, temporibus? Accusamus
@@ -91,14 +94,15 @@
         </article>
     </div>
 
-    <div>
+    <div class="container">
         <h3>Published 2021-09-17</h3>
+        <p><strong>Funny meme i found that all guys can relate to</strong></p>
         <article>
             <p class="zoom">
                 <img src="img/girlfriend.PNG" class="image-width" alt="girlfriend meme">
             </p>
         </article>
-        <p><strong>Funny meme i found that all guys can relate to</strong></p>
+
         <article>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid amet at autem beatae facilis
