Har pillat en del idag med smågrejer. Känner mig rätt nöjd med hur allt ser ut. Nästa steg blir att gå igenom all kod för att se vad som är överflödigt.

--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -39,16 +39,30 @@
 </header>
 
 <main>
-    <section>
-        <p>
-            <strong>I've built this webpage as a project in the course webdeveloper that i'm attending at Campus Mölndal.<br>
-                It's built using HTML5 and CSS. Feel free to navigate through the navbar at the top</strong>
-        </p>
-    </section>
-
-    <section>
-        <img src="img/ipaid2.jpg" class="image-width" alt="picture of dad holding a ipaid sign">
-    </section>
+    <div class="container">
+        <section class="center">
+            <p>
+                <strong>I've built this webpage as a project in the course webdeveloper that i'm attending at Campus
+                    Mölndal. It's built using HTML5 and CSS. Feel free to navigate through the navbar at the
+                    top</strong>
+            </p>
+        </section>
+        <section>
+            <article>
+                <p><strong>Index: The first page you see when visiting my homepage</strong></p>
+                <p><strong>About: Here you'll find more info about me</strong></p>
+                <p><strong>Other: Here i've added three youtubevideos via Iframe</strong></p>
+                <p><strong>Blogg: Here you'll find bloggposts i've made</strong></p>
+                <p><strong>Courses: Here you'll find the different courses I'm attending</strong></p>
+                <p><strong>Products: Here you'll find three products for 4K gaming</strong></p>
+            </article>
+        </section>
+    </div>
+    <div>
+        <section>
+            <img src="img/ipaid2.jpg" class="image-width" alt="picture of dad holding a ipaid sign">
+        </section>
+    </div>
 </main>
 
 <footer>
