--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -40,24 +40,25 @@
 <main>
     <div class="center-text-over-iframe">
         <section>
-            <h2>Linus Tech Tips reviews Samsung Odyssey G9</h2>
+            <h2>Linus Tech Tips talks about Samsung Odyssey G9</h2>
         </section>
     </div>
-    <div class="iframe-container">
-        <section>
+    <div class="padding-to-h2-under">
+        <section class="iframe-container">
             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </section>
     </div>
+
     <div class="center-text-over-iframe">
         <section>
             <h2>Marques Brownlee aka MKBHD reviews GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
         </section>
     </div>
-    <div class="iframe-container">
-        <section>
+    <div class="padding-to-h2-under">
+        <section class="iframe-container">
             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/kFz9afj8lu0"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -69,8 +70,8 @@
             <h2>Gamers Nexus reviews AMD Ryzen 9 5950X 3.4 GHz 72MB</h2>
         </section>
     </div>
-    <div class="iframe-container">
-        <section>
+    <div class="padding-to-h2-under">
+        <section class="iframe-container">
             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/72AHENDeTEI"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
