Gör färdigt det sista. Har en grej som jag får be Lars kolla på

--- a/webbutveckling_1/assignment/about.html
+++ b/webbutveckling_1/assignment/about.html
@@ -62,7 +62,7 @@
                     I spent the next 16 years in Ytterby but when I got an offer to rent an apartment in Gothenburg via
                     a friend I couldn't say no. That a girl I was interested in lived only a few minutes from that place
                     didn't exactly made the decision harder ;)<br>
-                    This girl and I work at the same company so I'd been checking her out for a couple for years without
+                    This girl and I work at the same company, so I'd been checking her out for a couple for years without
                     really trying to make a move on her. I've only sent her a couple of text maybe. Well, happy
                     coincidence, almost the same time as I moved to the
                     apartment our company had a big party which we both attended. Later that night we both ended up at
