--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -69,7 +69,7 @@
             </article>
         </section>
         <section class="center-picture-grid">
-            <p><img src="img/3090small.jpg" alt="3090 graphics card" class="img-responsive"></p>
+            <p><img src="img/3090small.jpg" alt="3090 graphics card" class="img-responsive2"></p>
 
             <p>
                 <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
@@ -104,7 +104,7 @@
                     peripheral vision. But that's not all, it's a really good-looking monitor too" -Tomshardware.com</p>
 
 
-                <p>Is the Samsung Odyssey Neo G9 Worth Buying? The Samsung Odyssey Neo G9 is an excellent gaming
+                <p>"Is the Samsung Odyssey Neo G9 Worth Buying? The Samsung Odyssey Neo G9 is an excellent gaming
                     monitor. It
                     delivers as much screen real estate as two 27-inch monitors without a bezel in the center and with
                     an
@@ -116,17 +116,17 @@
             <h2>AMD Ryzen 9 5950X 3.4 GHz 72MB</h2>
             <article>
                 <p>
-                    "the short conclusion for the Ryzen 9 5950X is that even at $799 suggested retail price, it enables
+                    "The short conclusion for the Ryzen 9 5950X is that even at $799 suggested retail price, it enables
                     a new level of consumer grade performance across the board. The single thread frequency is crazy
                     high, and when combined with the new core design with its higher IPC, pushes workloads that are
                     single-core limited above and beyond Intel’s best Tiger Lake processors. When it comes to
-                    multi-threaded workloads, we have new records for a consumer processor across the board."
+                    multi-threaded workloads, we have new records for a consumer processor across the board"
                     -anandtech.com</p>
 
                 <p>
-                    As a mega-core monster, the AMD Ryzen 9 5950X does exactly what we expected it to, given what we saw
+                    "As a mega-core monster, the AMD Ryzen 9 5950X does exactly what we expected it to, given what we saw
                     with the Ryzen 9 3950X that came before it: It provides elite-level multicore muscle at a reasonable
-                    price point. -uk.pcmag.com
+                    price point" -uk.pcmag.com
                 </p>
 
                 <p>
@@ -137,7 +137,7 @@
             </article>
         </section>
         <section class="center-picture-grid">
-            <p><img src="img/ryzen5950x.jpg" alt="picture of ryzen 5950x processor" class="img-responsive"></p>
+            <p><img src="img/ryzen5950x.jpg" alt="picture of ryzen 5950x processor" class="img-responsive2"></p>
 
             <p>
                 <a href="https://www.pricerunner.se/pl/40-5305356/Processorer/AMD-Ryzen-9-5950X-3.4GHz-Socket-AM4-Box-without-Cooler-priser"
