Klar med i princip allt. Har en grej i about som jag får be Lars kolla på. Börjar med dokumentationen idag.

--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -34,7 +34,7 @@
 </nav>
 
 <header>
-    <h1 class="header">Useful products for 4K gaming</h1>
+    <h1>Useful products for 4K gaming</h1>
 </header>
 
 <main>
