Problemet är att jag inte kan hålla mig från att gå in och ändra och lägga till. Nu är den klar

--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -39,7 +39,7 @@
 
 <main>
     <div class="text-left-image-right">
-        <section class="center-text-horisontally-in-grid">
+        <section class="center-text-vertically-in-grid">
             <h2>GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
             <article>
                 <p>
@@ -69,7 +69,7 @@
             </article>
         </section>
         <section class="center-picture-grid">
-            <p><img src="img/3090small.jpg" alt="3090 graphics card" class="img-responsive2"></p>
+            <img src="img/3090small.jpg" alt="3090 graphics card" class="img-responsive2">
 
             <p>
                 <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
@@ -112,7 +112,7 @@
         </section>
     </div>
     <div class="text-left-image-right">
-        <section class="center-text-horisontally-in-grid">
+        <section class="center-text-vertically-in-grid">
             <h2>AMD Ryzen 9 5950X 3.4 GHz 72MB</h2>
             <article>
                 <p>
@@ -124,7 +124,8 @@
                     -anandtech.com</p>
 
                 <p>
-                    "As a mega-core monster, the AMD Ryzen 9 5950X does exactly what we expected it to, given what we saw
+                    "As a mega-core monster, the AMD Ryzen 9 5950X does exactly what we expected it to, given what we
+                    saw
                     with the Ryzen 9 3950X that came before it: It provides elite-level multicore muscle at a reasonable
                     price point" -uk.pcmag.com
                 </p>
