--- a/programmering_1/lektioner/2021-10-12/guessingGameWithHtml.html
+++ b/programmering_1/lektioner/2021-10-12/guessingGameWithHtml.html
@@ -9,19 +9,16 @@
 <body>
 <h2>Prompt</h2>
 
-<button onclick="runGameWhile()">Starta spelet</button>
-
 <label>
-    <input type='number' id='my-guess' value='5'>
+    <input type='number' id='userNumber' value='5'>
 </label>
 <button onclick='newGuess()'>Guess</button>
 
-<h3 id='guess-output-text'></h3>
-<h3 id='guess-output-counter'></h3>
+
 
 <button onclick='resetGame()'>Reset game</button>
 
-<script src='js/guessingGameWithHtml.js'></script>
+
 <script src='js/script.js'></script>
 </body>
 </html>
