--- a/Gränssnittsdesign/assignment/black_orange.html
+++ b/Gränssnittsdesign/assignment/black_orange.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link rel='stylesheet' href='css/style.css'>
+    <title>Black/Orange</title>
+    <link rel='stylesheet' href='css/black_orangestyle.css'>
     <link rel='stylesheet' href='css/dropdownmenustyle.css'>
 </head>
 <body>
 
 <header>
     <section class="header">
-        <img src="img/logo.gif" class="logo" alt="logo">
+        <a href="index.html"><img src="img/logo.gif" class="logo" alt="logo"></a>
     </section>
     <section>
         <img class="banner" src="img/50off.gif" alt="banner">
